Fri Nov 14 23:11:35 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * rules.ciao.GNU:

          Translate \ to / in $(CIAO_ROOT).

Fri Nov 14 13:53:49 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * tools/Config_Handlers/cid.cpp:
        * tools/Config_Handlers/DP_Handler.cpp:
        * tools/Config_Handlers/MDD_Handler.cpp:
        * tools/Config_Handlers/CPD_Handler.cpp:
        * tools/Config_Handlers/pcd.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynEnum_Handler.cpp:
        * tools/Config_Handlers/Property_Handler.cpp:
        * tools/Config_Handlers/ID_Handler.cpp:
        * tools/Config_Handlers/toplevel.cpp:
        * tools/Config_Handlers/Package_Handlers/PCD_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/CPD_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/NIA_Handler.h:
        * tools/Config_Handlers/Package_Handlers/SID_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/CAD_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/IAD_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/Comp_Intf_Descr_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/CID_Handler.cpp:
        * tools/Config_Handlers/PCD_Handler.cpp:
        * tools/Config_Handlers/CRDD_Handler.cpp:
        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/CIAO_Events/CIAOEvents.cpp:
        * tools/Config_Handlers/CIAO_Events/CIAOEvents_Handler.cpp:
        * tools/Config_Handlers/Req_Handler.cpp:
        * tools/Config_Handlers/ccd.cpp:
        * tools/Config_Handlers/RDD_Handler.cpp:
        * tools/Config_Handlers/ERE_Handler.cpp:
        * tools/Config_Handlers/Utils/XML_Helper.cpp:
        * tools/Config_Handlers/Utils/XML_Schema_Resolver.cpp:
        * tools/Config_Handlers/Utils/Functors.h:
        * tools/Config_Handlers/XML_File_Intf.cpp:
        * tools/Config_Handlers/Deployment.cpp: